--- a/ImageGallery/index.html
+++ b/ImageGallery/index.html
@@ -12,40 +12,40 @@
 	<h1>Images/WEB</h1>
 	<hr>
 	<div id="container">
-		<div class="ImageContainer">
+		<div class="ImageContainer col-lg-3 col-md-6 col-sm-12">
 			<img src="images/1.jpeg" alt="Web image">
 		</div>
-		<div class="ImageContainer">
+		<div class="ImageContainer col-lg-3 col-md-6 col-sm-12">
 			<img src="images/2.png" alt="webImg">
 		</div>
-		<div class="ImageContainer">
+		<div class="ImageContainer col-lg-3 col-md-6 col-sm-12">
 			<img src="images/3.jpeg" alt="webImg">
 		</div>
-		<div class="ImageContainer">
+		<div class="ImageContainer col-lg-3 col-md-6 col-sm-12">
 			<img src="images/4.jpeg" alt="webImg">
 		</div>
-				<div class="ImageContainer">
+				<div class="ImageContainer col-lg-3 col-md-6 col-sm-12">
 			<img src="images/5.png" alt="Web image">
 		</div>
-		<div class="ImageContainer">
+		<div class="ImageContainer col-lg-3 col-md-6 col-sm-12">
 			<img src="images/6.png" alt="webImg">
 		</div>
-		<div class="ImageContainer">
+		<div class="ImageContainer col-lg-3 col-md-6 col-sm-12">
 			<img src="images/7.jpeg" alt="webImg">
 		</div>
-		<div class="ImageContainer">
+		<div class="ImageContainer col-lg-3 col-md-6 col-sm-12">
 			<img src="images/8.jpeg" alt="webImg">
 		</div>
-				<div class="ImageContainer">
+				<div class="ImageContainer col-lg-3 col-md-6 col-sm-12">
 			<img src="images/9.jpeg" alt="Web image">
 		</div>
-		<div class="ImageContainer">
+		<div class="ImageContainer col-lg-3 col-md-6 col-sm-12">
 			<img src="images/10.jpeg" alt="webImg">
 		</div>
-		<div class="ImageContainer">
+		<div class="ImageContainer col-lg-3 col-md-6 col-sm-12">
 			<img src="images/11.jpeg" alt="webImg">
 		</div>
-		<div class="ImageContainer">
+		<div class="ImageContainer col-lg-3 col-md-6 col-sm-12">
 			<img src="images/12.jpeg" alt="webImg">
 		</div>
 	</div>
