--- a/FirstJS/index.html
+++ b/FirstJS/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>First JS</title>
+	<title>Функции</title>
 </head>
 <body>
-	<button onclick="console.log('Hello World!')">My button</button>
+	<h1>Функции</h1>
 
 <script type="text/javascript" src="js/scripts.js"></script>
 </body>
