--- a/Pizza/index.html
+++ b/Pizza/index.html
@@ -4,14 +4,38 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=, initial-scale=1.0">
 	<link rel="stylesheet" href="css/styles.css">
-	<title>Document</title>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+	<title>Black Pizza</title>
 </head>
 <body>
-	<div>
-		<header>
-			
-		</header>
+	<header class="header">
+		<div class="container">
+			<div class="header__inner">
+				<div class="headerImg">
+				</div>
+				<nav>
+					<a href="#" class="navigation__link">
+						Главная
+					</a>
+					<a href="#" class="navigation__link">
+						Пицца
+					</a>								
+					<a href="#" class="navigation__link">
+						О нас
+					</a>
+					<a href="#" class="navigation__link">
+						Контакты
+					</a>
+				</nav>
+			</div>
+		</div>
+	</header>
+	<main>
 		
-	</div>
+	</main>
+	<footer>
+		
+	</footer>
 </body>
 </html>
