adding notebook slideshow

--- a/Buziness/index.html
+++ b/Buziness/index.html
@@ -26,12 +26,24 @@
 		<div class="main_container">
 			<h1>Boost up your local business</h1>
 			<h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi luctus lectus eu ex mollis blandit.</h3>
-			<form action="#">
+			<form action="#" class="main_form">
 				<input type="text" name="name" id="name_input" placeholder="Full Name">
 				<input type="email" name="email" id="email_input" placeholder="Email Adress">
 				<input type="tel" name="phone" id="phone_input" placeholder="Phone Number">
 				<input type="submit" id="input_button" value="REQUEST A QUOTE">
 			</form>
+			<div class="notebook_img_container">
+				<img src="img/notebook.png" alt="notebook slider">
+				<form action="#" class="notebook_slider_form">
+					<input type="radio" name="radio_btn" checked id="rb1">
+					<input type="radio" name="radio_btn" id="rb2">
+					<input type="radio" name="radio_btn"
+					id="rb3">
+				</form>
+			</div>
+			<div class="services_container">
+				
+			</div>
 		</div>
 	</main>
 	<footer>
