--- a/Buziness/index.html
+++ b/Buziness/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 	<title>Buziness site</title>
 </head>
 <body>
@@ -32,18 +32,50 @@
 				<input type="tel" name="phone" id="phone_input" placeholder="Phone Number">
 				<input type="submit" id="input_button" value="REQUEST A QUOTE">
 			</form>
-			<div class="notebook_img_container">
-				<img src="img/notebook.png" alt="notebook slider">
-				<form action="#" class="notebook_slider_form">
-					<input type="radio" name="radio_btn" checked id="rb1">
-					<input type="radio" name="radio_btn" id="rb2">
-					<input type="radio" name="radio_btn"
+					<div class="notebook_img_container">
+			<img src="img/notebook.png" alt="notebook slider">
+			<form action="#" class="notebook_slider_form">
+				<input type="radio" name="radio_btn" checked id="rb1">
+				<input type="radio" name="radio_btn" id="rb2">
+				<input type="radio" name="radio_btn"
 					id="rb3">
-				</form>
-			</div>
-			<div class="services_container">
-				
-			</div>
+			</form>
+		</div>
+		</div>
+
+		<div class="services_container">
+			<h1>our services</h1>
+			<h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h3>
+			<section class="services_section">
+				<img src="img/clock.svg" alt="clock image">
+				<h4 class="section_header">font-awesome icons</h4>
+				<p class="section_paragraph">Lorem Ipsum is simply dummy text of the printing and typesettin industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
+			</section>
+			<section class="services_section">
+				<img src="img/gear-fill.svg" alt="gear image">
+				<h4 class="section_header">fully responsive design</h4>
+				<p class="section_paragraph">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
+			</section>
+			<section class="services_section">
+				<img src="img/graduation.svg" alt="gear image">
+				<h4 class="section_header">working contact form</h4>
+				<p class="section_paragraph">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
+			</section>
+			<section class="services_section">
+				<img src="img/rocket.svg" alt="gear image">
+				<h4 class="section_header">retina ready icons here</h4>
+				<p class="section_paragraph">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
+			</section>
+			<section class="services_section">
+				<img src="img/peace.svg" alt="gear image">
+				<h4 class="section_header">friendly code</h4>
+				<p class="section_paragraph">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
+			</section>
+			<section class="services_section">
+				<img src="img/dollar.svg" alt="gear image">
+				<h4 class="section_header">flat trendy landing page design</h4>
+				<p class="section_paragraph">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
+			</section>
 		</div>
 	</main>
 	<footer>
