starting about us section:

--- a/Buziness/index.html
+++ b/Buziness/index.html
@@ -77,6 +77,9 @@
 				<p class="section_paragraph">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
 			</section>
 		</div>
+		<div class="about_us">
+			
+		</div>
 	</main>
 	<footer>
 		
