--- a/Buziness/index.html
+++ b/Buziness/index.html
@@ -78,7 +78,12 @@
 			</section>
 		</div>
 		<div class="about_us">
-			
+			<div class="about_background_img"></div>
+			<div class="about_us_inner">
+				<h3>about us</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc porttitor eu neque sit amet cursus. Proin sit amet dolor turpis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus eu augue lorem. Proin vehicula consequat tristique. Maecenas sagittis sodales tristique.</p>
+				<a href="#">read more</a>
+			</div>
 		</div>
 	</main>
 	<footer>
