--- a/Buziness/index.html
+++ b/Buziness/index.html
@@ -44,7 +44,7 @@
 		</div>
 
 		<div class="services_container">
-			<h1>our services</h1>
+			<h2>our services</h2>
 			<h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h3>
 			<section class="services_section">
 				<img src="img/clock.svg" alt="clock image">
@@ -80,10 +80,14 @@
 		<div class="about_us">
 			<div class="about_background_img"></div>
 			<div class="about_us_inner">
-				<h3>about us</h3>
+				<h2>about us</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc porttitor eu neque sit amet cursus. Proin sit amet dolor turpis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus eu augue lorem. Proin vehicula consequat tristique. Maecenas sagittis sodales tristique.</p>
 				<a href="#">read more</a>
 			</div>
+		</div>
+		<div class="choose_your_price">
+			<h2>choose your price</h2>
+			<h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4>
 		</div>
 	</main>
 	<footer>
