--- a/Buziness/index.html
+++ b/Buziness/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
 	<title>Buziness site</title>
 </head>
 <body>
@@ -85,9 +85,21 @@
 				<a href="#">read more</a>
 			</div>
 		</div>
-		<div class="choose_your_price">
+		<div class="choose_price">
 			<h2>choose your price</h2>
-			<h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4>
+			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+			<div class="choose_price_inner">
+				<h2>premium plan</h2>
+				<h1><sup>$</sup>42</h1>
+				<p>per month</p>
+				<hr>
+				<p>2 account</p>
+				<hr>
+				<p>100 mb storage</p>
+				<hr>
+				<p id="last_paragraph">custom cloud services</p>
+				<p><a href="#">get started</a></p>
+			</div>
 		</div>
 	</main>
 	<footer>
