finishing choose your price

--- a/Buziness/index.html
+++ b/Buziness/index.html
@@ -86,19 +86,45 @@
 			</div>
 		</div>
 		<div class="choose_price">
-			<h2>choose your price</h2>
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 			<div class="choose_price_inner">
-				<h2>premium plan</h2>
-				<h1><sup>$</sup>42</h1>
-				<p>per month</p>
-				<hr>
-				<p>2 account</p>
-				<hr>
-				<p>100 mb storage</p>
-				<hr>
-				<p id="last_paragraph">custom cloud services</p>
-				<p><a href="#">get started</a></p>
+				<h1>Choose your price</h1>
+				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+				<div class="price_plans" id="basic_plan">
+					<h3>Basic Plan</h3>
+					<h1><sup>$</sup>22</h1>
+					<p class="per_month">per month</p>
+					<hr>
+					<p>1 account</p>
+					<hr>
+					<p>8 hour support</p>
+					<hr>
+					<p>custom cloud services</p>
+					<p class="last_p"><a href="#">get started</a></p>
+				</div>
+				<div class="price_plans" id="premium_plan">
+					<h3>Premium Plan</h3>
+					<h1><sup>$</sup>42</h1>
+					<p class="per_month">per month</p>
+					<hr>
+					<p>2 account</p>
+					<hr>
+					<p>100mb storage</p>
+					<hr>
+					<p>custom cloud services</p>
+					<p class="last_p"><a href="#">get started</a></p>
+				</div>
+				<div class="price_plans" id="gold_plan">
+					<h3>Gold Plan</h3>
+					<h1><sup>$</sup>62</h1>
+					<p class="per_month">per month</p>
+					<hr>
+					<p>8 account</p>
+					<hr>
+					<p>24 hour support</p>
+					<hr>
+					<p>custom cloud services</p>
+					<p class="last_p"><a href="#">get started</a></p>
+				</div>
 			</div>
 		</div>
 	</main>
