--- a/FirstJS/index.html
+++ b/FirstJS/index.html
@@ -3,10 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Массивы</title>
+	<title>DOM</title>
 </head>
 <body>
-	<h1>Массивы</h1>
+	<h1 id="header">What is the HTML DOM?</h1>
+	<p>The HTML DOM is a standard object model and programming interface for HTML. It defines:
+	</p>
+	<ul>
+		<li class="list">The HTML elements as objects</li>
+		<li class="list">The properties of all HTML elements</li>
+		<li class="list">The methods to access all HTML elements</li>
+		<li class="list">The events for all HTML elements</li>
+	</ul>
 
 <script type="text/javascript" src="js/scripts.js"></script>
 </body>
