--- a/Buziness/index.html
+++ b/Buziness/index.html
@@ -12,13 +12,14 @@
 	<header>
 		<div class="container">
 			<img src="img/logo.png" alt="logo image">
-			<ul>
-				<li id="liHome"><a href="#" class="menu_item">Home</a></li>					<li><a href="#" class="menu_item">Service</a></li>
-				<li><a href="#" class="menu_item">About us</a></li>
-				<li><a href="#" class="menu_item">Pricing table</a></li>
-				<li><a href="#" class="menu_item">How it work</a></li>
-				<li><a href="#" class="menu_item">Happy clients</a></li>
-				<li><a href="#" class="menu_item">Contact us</a></li>
+			<ul class="main_ul">
+				<li class="liItem"><a href="#" class="menu_item">Home</a></li>
+				<li class="liItem"><a href="#" class="menu_item">Service</a></li>
+				<li class="liItem"><a href="#" class="menu_item">About us</a></li>
+				<li class="liItem"><a href="#" class="menu_item">Pricing table</a></li>
+				<li class="liItem"><a href="#" class="menu_item">How it work</a></li>
+				<li class="liItem"><a href="#" class="menu_item">Happy clients</a></li>
+				<li class="liItem"><a href="#" class="menu_item">Contact us</a></li>
 			</ul>
 		</div>
 	</header>
@@ -32,15 +33,15 @@
 				<input type="tel" name="phone" id="phone_input" placeholder="Phone Number">
 				<input type="submit" id="input_button" value="REQUEST A QUOTE">
 			</form>
-					<div class="notebook_img_container">
-			<img src="img/notebook.png" alt="notebook slider">
-			<form action="#" class="notebook_slider_form">
-				<input type="radio" name="radio_btn" checked id="rb1">
-				<input type="radio" name="radio_btn" id="rb2">
-				<input type="radio" name="radio_btn"
+			<div class="notebook_img_container">
+				<img src="img/notebook.png" alt="notebook slider">
+				<form action="#" class="notebook_slider_form">
+					<input type="radio" name="radio_btn" checked id="rb1">
+					<input type="radio" name="radio_btn" id="rb2">
+					<input type="radio" name="radio_btn"
 					id="rb3">
-			</form>
-		</div>
+				</form>
+			</div>
 		</div>
 
 		<div class="services_container">
@@ -127,9 +128,111 @@
 				</div>
 			</div>
 		</div>
+		<div class="how_it_works">
+			<div class="how_it_works_inner">
+				<h1>how it works</h1>
+				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+				<section class="how_it_works_section">
+					<img src="img/headphones.svg" alt="headphones image">
+					<h3>step 1</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque quod debitis exercitationem explicabo eos necessitatibus.</p>
+				</section>
+				<section class="how_it_works_section">
+					<img src="img/lock.svg">
+					<h3>step 2</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque quod debitis exercitationem explicabo eos necessitatibus.</p>
+				</section>
+				<section class="how_it_works_section">
+					<img src="img/cloud.svg" alt="headphones image">
+					<h3>step 3</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque quod debitis exercitationem explicabo eos necessitatibus.</p>
+				</section>
+				<section class="how_it_works_section">
+					<img src="img/hand-thumbs.svg" alt="headphones image">
+					<h3>step 4</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque quod debitis exercitationem explicabo eos necessitatibus.</p>
+				</section>
+				<p id="how_it_works_last"><a href="#">get start now</a></p>
+			</div>
+		</div>
+		<div class="happy_clients">
+			<div class="happy_clients_inner">
+				<h1>happy clients</h1>
+				<p>We are explain who is using our business solution</p>
+				<section class="clients_section clients_left">
+					<img src="img/face1.png" alt="">
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Illum, deleniti, laudantium! Architecto, animi, voluptas. Sequi deleniti autem saepe omnis repudiandae necessitatibus.</p>
+					<h4><span>darvin michle,</span>project manager</h4>
+				</section>
+				<section class="clients_section clients_right">
+					<img src="img/face2.png" alt="">
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Illum, deleniti, laudantium! Architecto, animi, voluptas. Sequi deleniti autem saepe omnis repudiandae necessitatibus.</p>
+					<h4><span>madam elisabath,</span>creative director</h4>
+				</section>
+				<section class="clients_section clients_left">
+					<img src="img/face3.png" alt="">
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Illum, deleniti, laudantium! Architecto, animi, voluptas. Sequi deleniti autem saepe omnis repudiandae necessitatibus.</p>
+					<h4><span>clips arter,</span>lipsum director</h4>
+				</section>
+				<section class="clients_section clients_right">
+					<img src="img/face4.png" alt="">
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Illum, deleniti, laudantium! Architecto, animi, voluptas. Sequi deleniti autem saepe omnis repudiandae necessitatibus.</p>
+					<h4><span>zam cristafr,</span>manager</h4>
+				</section>
+			</div>
+		</div>
+		<div class="newsletter">
+			<div class="newsletter_inner">
+				<div class="newsletter_header">
+					<h1>newsletter</h1>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+					<form action="#" class="main_form newsletter_form">
+						<input type="text" name="name" id="name_input" placeholder="Full Name">
+						<input type="email" name="email" id="email_input" placeholder="Email Adress">
+						<input type="submit" id="input_button" value="SUBSCRIBE">
+					</form>
+				</div>
+				<div class="newsletter_earth_back">
+					<div class="address">
+						<h3>Address</h3>
+						<p>Business street</p>
+						<p>Second north section</p>
+						<p>Bavani nagar. 88769</p>
+						<p>Call: +987-9976-999</p>
+						<p id="info">info@businesssafe.com</p>
+					</div>
+					<div class="newsletter_logo_container">
+						<img src="img/logo.png" alt="logo">
+					</div>
+				</div>
+				<hr id="last_hr">
+				<ul id ="last_list">
+					<li><a href="#">home</a></li>
+					<li><a href="#">service</a></li>
+					<li><a href="#">about us</a></li>
+					<li><a href="#">pricing table</a></li>
+					<li><a href="#">how it work</a></li>
+					<li><a href="#">happy clients</a></li>
+					<li><a href="#">contact us</a></li>
+				</ul>
+				<div class="phone_container">
+					<img src="img/telephone-fill.svg" alt="">
+					<span>+987 9976 999</span>
+				</div>
+				<div class="social_media">
+					<img src="img/twitter.svg" alt="twitter image">
+					<img src="img/facebook.svg" alt="facebook image">
+					<img src="img/google.svg" alt="google image">
+					<img src="img/linkedin.svg" alt="linkedin image">
+				</div>
+			</div>
+
+		</div>
+		<div class="footer">
+			<div class="footer_inner">
+			<p>All contents © copyright 2014 Business Theme. All rights reserv</p>
+			</div>
+		</div>
 	</main>
-	<footer>
-		
-	</footer>
 </body>
 </html>
