--- a/Buziness/index.html
+++ b/Buziness/index.html
@@ -13,18 +13,18 @@
 		<div class="container">
 			<img src="img/logo.png" alt="logo image">
 			<ul class="main_ul">
-				<li class="liItem"><a href="#" class="menu_item">Home</a></li>
-				<li class="liItem"><a href="#" class="menu_item">Service</a></li>
-				<li class="liItem"><a href="#" class="menu_item">About us</a></li>
-				<li class="liItem"><a href="#" class="menu_item">Pricing table</a></li>
-				<li class="liItem"><a href="#" class="menu_item">How it work</a></li>
-				<li class="liItem"><a href="#" class="menu_item">Happy clients</a></li>
-				<li class="liItem"><a href="#" class="menu_item">Contact us</a></li>
+				<li class="liItem"><a href="#home" class="menu_item">Home</a></li>
+				<li class="liItem"><a href="#service" class="menu_item">Service</a></li>
+				<li class="liItem"><a href="#about_us" class="menu_item">About us</a></li>
+				<li class="liItem"><a href="#price" class="menu_item">Pricing table</a></li>
+				<li class="liItem"><a href="#how_it_work" class="menu_item">How it work</a></li>
+				<li class="liItem"><a href="#happy_clients" class="menu_item">Happy clients</a></li>
+				<li class="liItem"><a href="#newsletter" class="menu_item">Contact us</a></li>
 			</ul>
 		</div>
 	</header>
 	<main>
-		<div class="main_container">
+		<div id="home" class="main_container">
 			<h1>Boost up your local business</h1>
 			<h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi luctus lectus eu ex mollis blandit.</h3>
 			<form action="#" class="main_form">
@@ -44,7 +44,7 @@
 			</div>
 		</div>
 
-		<div class="services_container">
+		<div id="service" class="services_container">
 			<h2>our services</h2>
 			<h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h3>
 			<section class="services_section">
@@ -78,7 +78,7 @@
 				<p class="section_paragraph">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
 			</section>
 		</div>
-		<div class="about_us">
+		<div id="about_us" class="about_us">
 			<div class="about_background_img"></div>
 			<div class="about_us_inner">
 				<h2>about us</h2>
@@ -86,7 +86,7 @@
 				<a href="#">read more</a>
 			</div>
 		</div>
-		<div class="choose_price">
+		<div id="price" class="choose_price">
 			<div class="choose_price_inner">
 				<h1>Choose your price</h1>
 				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
@@ -128,7 +128,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="how_it_works">
+		<div id="how_it_work" class="how_it_works">
 			<div class="how_it_works_inner">
 				<h1>how it works</h1>
 				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
@@ -155,7 +155,7 @@
 				<p id="how_it_works_last"><a href="#">get start now</a></p>
 			</div>
 		</div>
-		<div class="happy_clients">
+		<div id="happy_clients" class="happy_clients">
 			<div class="happy_clients_inner">
 				<h1>happy clients</h1>
 				<p>We are explain who is using our business solution</p>
@@ -181,7 +181,7 @@
 				</section>
 			</div>
 		</div>
-		<div class="newsletter">
+		<div id="newsletter" class="newsletter">
 			<div class="newsletter_inner">
 				<div class="newsletter_header">
 					<h1>newsletter</h1>
@@ -207,13 +207,13 @@
 				</div>
 				<hr id="last_hr">
 				<ul id ="last_list">
-					<li><a href="#">home</a></li>
-					<li><a href="#">service</a></li>
-					<li><a href="#">about us</a></li>
-					<li><a href="#">pricing table</a></li>
-					<li><a href="#">how it work</a></li>
-					<li><a href="#">happy clients</a></li>
-					<li><a href="#">contact us</a></li>
+					<li><a href="#home">home</a></li>
+					<li><a href="#service">service</a></li>
+					<li><a href="#about_us">about us</a></li>
+					<li><a href="#price">pricing table</a></li>
+					<li><a href="#how_it_work">how it work</a></li>
+					<li><a href="#happy_clients">happy clients</a></li>
+					<li><a href="#newsletter">contact us</a></li>
 				</ul>
 				<div class="phone_container">
 					<img src="img/telephone-fill.svg" alt="">
@@ -230,7 +230,7 @@
 		</div>
 		<div class="footer">
 			<div class="footer_inner">
-			<p>All contents © copyright 2014 Business Theme. All rights reserv</p>
+			<p>All contents © copyright 2014 Business Theme. All rights reserved. Designed by: akhilwebfolio</p>
 			</div>
 		</div>
 	</main>
